--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,8 @@ ul, ol {
     text-transform: uppercase;
     font-size: 18px;
     font-weight: 700;
-    line-height: 1.16;
-    letter-spacing: -0.03em;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
     color:#4d5ae5;
 }
 
@@ -63,8 +63,12 @@ ul, ol {
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
-    letter-spacing: -0.02em;
+    letter-spacing: 0.02em;
     color:#2e2f42;
+}
+
+.header-menu-link:active{
+    color: #404bbf;
 }
 
 .header-menu-link:hover {
@@ -84,9 +88,11 @@ ul, ol {
     color:#404bbf;
 }
 
+.address-link:active {
+    color:#404bbf;
+}
+
 .hero {
-    padding-top: 188px;
-    padding-bottom: 188px;
     background-color: #2e2f42;
     color:#ffffff
 }
@@ -98,12 +104,6 @@ ul, ol {
     line-height: 1.5;
     letter-spacing: -0.04em;
     background-color: #4d5ae5;
-    border: none;
-    padding-left: 32px;
-    padding-right: 32px;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    border-radius: 4px;
     color:#ffffff;
 }
 
@@ -124,8 +124,6 @@ ul, ol {
 .footer{
     background-color: #2e2f42;
     color:#ffffff;
-    padding-top: 100px;
-    padding-bottom: 100px;
 }
 
 .footer-logo {
