--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ ul, ol {
     font-size: 56px;
     font-weight: 700;
     line-height: 1.07;
-    letter-spacing: -0.02em;
+    letter-spacing: 0.02em;
     text-align: center;
 }
 
@@ -24,21 +24,21 @@ ul, ol {
     font-size: 36px;
     font-weight: 700;
     line-height: 1.1;
-    letter-spacing: -0.02em;
+    letter-spacing: 0.02em;
 }
 
 .headline-h3 {
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
-    letter-spacing: -0.02em;
+    letter-spacing: 0.02em;
 }
 
 .body-text {
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
-    letter-spacing: -0.02em;
+    letter-spacing: 0.02em;
 }
 
 .header {
@@ -75,6 +75,10 @@ ul, ol {
     color:#404bbf;
 }
 
+.address {
+    font-style:normal;
+}
+
 .address-link {
     font-size: 16px;
     font-weight: 400;
@@ -102,7 +106,7 @@ ul, ol {
     font-weight: 500;
     font-style: normal;
     line-height: 1.5;
-    letter-spacing: -0.04em;
+    letter-spacing: 0.04em;
     background-color: #4d5ae5;
     color:#ffffff;
 }
@@ -112,10 +116,14 @@ ul, ol {
     background-color: #404bbf;
 }
 
+.primary-button:focus {
+    color:#ffffff;
+    background-color: #404bbf;
+}
+
 .primary-button {
     cursor: pointer;
 }
-
 
 .team {
     background-color: #F4F4FD ;
@@ -132,7 +140,7 @@ ul, ol {
     font-size: 18px;
     font-weight: 700;
     line-height: 1.16;
-    letter-spacing: -0.03em;
+    letter-spacing: 0.03em;
     color: #4d5ae5;
 }
 
