--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ ul, ol {
     list-style-type: none;
 }
 
-.headline-h1 {
+.page-title {
     font-size: 56px;
     font-weight: 700;
     line-height: 1.07;
@@ -25,6 +25,14 @@ ul, ol {
     font-weight: 700;
     line-height: 1.1;
     letter-spacing: 0.02em;
+}
+
+.section-headline {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    color:#2e2f42;
 }
 
 .headline-h3 {
